--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
-    "graphql": "^14.0.2"
+    "formidable": "^1.2.1",
+    "graphql": "^14.0.2",
+    "npm": "^6.4.1"
   }
 }
